--- a/docs/styles.css
+++ b/docs/styles.css
@@ -22,14 +22,13 @@ svg {
 }
 
 .cloud {
-  transform-origin: 50%;
-  &.blur {
-    filter: url(#blur);
-  }
+  -webkit-transform-origin: 50%;
+          transform-origin: 50%;
 }
-
-// Credit to @billyysea for the sky gradients
-// https://codepen.io/billyysea/pen/whjbK?editors=1100
+.cloud.blur {
+  -webkit-filter: url(#blur);
+          filter: url(#blur);
+}
 
 .sky-gradient-0 {
   background: linear-gradient(to bottom, #4a4969 0%, #7072ab 50%, #cd82a0 100%);
@@ -50,27 +49,17 @@ svg {
 .sky-gradient-4 {
   background: linear-gradient(to bottom, #1e528e 0%, #265889 50%, #9da671 100%);
 }
+
 .sky-gradient-5 {
   background: linear-gradient(to bottom, #1e528e 0%, #728a7c 50%, #e9ce5d 100%);
 }
+
 .sky-gradient-6 {
-  background: linear-gradient(
-    to bottom,
-    #154277 0%,
-    #576e71 30%,
-    #e1c45e 70%,
-    #b26339 100%
-  );
+  background: linear-gradient(to bottom, #154277 0%, #576e71 30%, #e1c45e 70%, #b26339 100%);
 }
+
 .sky-gradient-7 {
-  background: linear-gradient(
-    to bottom,
-    #163c52 0%,
-    #4f4f47 30%,
-    #c5752d 60%,
-    #b7490f 80%,
-    #2f1107 100%
-  );
+  background: linear-gradient(to bottom, #163c52 0%, #4f4f47 30%, #c5752d 60%, #b7490f 80%, #2f1107 100%);
 }
 
 button {
@@ -82,80 +71,150 @@ button {
   margin-top: 2em;
   cursor: pointer;
   transition: 0.25s ease-in-out;
-  &:hover {
-    transform: scale(1.1);
-  }
+}
+button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .pop {
-  animation: pop 0.3s ease-in-out forwards;
+  -webkit-animation: pop 0.3s ease-in-out forwards;
+          animation: pop 0.3s ease-in-out forwards;
 }
 
 .slidein {
-  animation: slidein 1s ease-out forwards;
+  -webkit-animation: slidein 1s ease-out forwards;
+          animation: slidein 1s ease-out forwards;
 }
 
 .fromLeft {
-  animation: fromleft 1s ease-out forwards;
+  -webkit-animation: fromleft 1s ease-out forwards;
+          animation: fromleft 1s ease-out forwards;
 }
 
 .fromRight {
-  animation: fromright 1s ease-out forwards;
+  -webkit-animation: fromright 1s ease-out forwards;
+          animation: fromright 1s ease-out forwards;
 }
 
 #mountain,
 .highlight {
-  transform-origin: 50% 100%;
+  -webkit-transform-origin: 50% 100%;
+          transform-origin: 50% 100%;
 }
 
 button:focus {
   outline: 0;
 }
 
+@-webkit-keyframes slidein {
+  from {
+    -webkit-transform: scale(0.925);
+            transform: scale(0.925);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 @keyframes slidein {
   from {
-    transform: scale(0.925);
+    -webkit-transform: scale(0.925);
+            transform: scale(0.925);
   }
   to {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
-
+@-webkit-keyframes fromleft {
+  from {
+    -webkit-transform: translateX(-1px);
+            transform: translateX(-1px);
+  }
+  to {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
 @keyframes fromleft {
   from {
-    transform: translateX(-1px);
+    -webkit-transform: translateX(-1px);
+            transform: translateX(-1px);
   }
   to {
-    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
   }
 }
-
+@-webkit-keyframes fromright {
+  from {
+    -webkit-transform: translateX(1px);
+            transform: translateX(1px);
+  }
+  to {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
 @keyframes fromright {
   from {
-    transform: translateX(1px);
+    -webkit-transform: translateX(1px);
+            transform: translateX(1px);
   }
   to {
-    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
   }
 }
-
-@keyframes clouds {
+@-webkit-keyframes clouds {
   from {
-    transform: translateX((random(11) + 4)px);
+    -webkit-transform: translateX(8 px);
+            transform: translateX(8 px);
   }
   to {
-    transform: translateY(20px);
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+}
+@keyframes clouds {
+  from {
+    -webkit-transform: translateX(8 px);
+            transform: translateX(8 px);
+  }
+  to {
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+}
+@-webkit-keyframes pop {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  75%,
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 @keyframes pop {
   0% {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   50% {
-    transform: scale(0);
+    -webkit-transform: scale(0);
+            transform: scale(0);
   }
   75%,
   100% {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
